GNOME Bugzilla – Bug 616405
gsettings missing g_return_if_fail's
Last modified: 2010-04-22 01:11:47 UTC
The public GSettings functions are missing the usual parameter checks.
If you have a patch...
Created attachment 159274 [details] [review] Add g_return_if_fail guards
Comment on attachment 159274 [details] [review] Add g_return_if_fail guards Looks ok
Comment on attachment 159274 [details] [review] Add g_return_if_fail guards commit 0fa791b29d4b3aa2154f322dda5a7c0d2caa1ede
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.