[gsettings] Add g_return_*_if_fail() guards

Reported by Christian Persch here:
https://bugzilla.gnome.org/show_bug.cgi?id=616405